[build-system]
requires  = [
    "wheel",
    "meson",
    "mesonpep517",
    "ninja",
]

build-backend = "mesonpep517.buildapi"

[tool.mesonpep517.metadata]
author="Dmitry Godyaev"
maintainer="Evgeni Burovski"
author-email="dvgodyaev@edu.hse.ru"
home-page="https://github.com/ev-br/mc_lib"
#module="mc_lib"
summary = "Assorted small utilities for MC simulations with Cython."
requires-python="py3"
description-file="README.md"
platforms="any"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires  = [
    "Cython>=0.29.18",
    "numpy>=1.19.5",
    "pytest"
]